# geekle-api

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
geekle_api/: __init__.py  api.py  game.py  reader.py
tests/: test_geekle_api.py
