[tool.poetry]
name = "geekle-api"
version = "0.1.0"
description = ""
authors = ["Pascal Cremer <pascal.cremer@geekcell.io>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
